adicionei outro parágrafo

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure est ad, dignissimos, natus veritatis nostrum voluptatum doloribus laborum iste sed recusandae facere totam cumque modi! Amet deleniti reiciendis enim ipsam.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ratione commodi autem ullam! Et pariatur qui voluptatum natus vel commodi. Adipisci, tempore esse minus nobis ipsum minima odit cum numquam.</p>
 </body>
 </html>
