--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -12,5 +12,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ratione commodi autem ullam! Et pariatur qui voluptatum natus vel commodi. Adipisci, tempore esse minus nobis ipsum minima odit cum numquam.</p>
     <p>o PO ta muito nervosinho, tenha calma meu anjo.</p>
+    <p>paragrafo criado no proprio github </p>
 </body>
 </html>
