--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -12,10 +12,7 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ratione commodi autem ullam! Et pariatur qui voluptatum natus vel commodi. Adipisci, tempore esse minus nobis ipsum minima odit cum numquam.</p>
     <p>o PO ta muito nervosinho, tenha calma meu anjo.</p>
-
-
+    <p>garoto de programa lero lero "lignuinha saliente"</p>
     <p>calma rapaz que isso agora</p>
-
-
 </body>
 </html>
