--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -15,6 +15,7 @@
     <p>garoto de programa lero lero "lignuinha saliente"</p>
     <p>calma rapaz que isso agora</p>
     <p>NOOOSSS</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consequuntur accusamus necessitatibus tempore culpa eligendi magnam id natus beatae autem inventore ea dolorum perferendis, possimus cumque consectetur molestias animi. Debitis!</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugiat vitae ratione voluptatem odio recusandae cum molestiae ullam soluta facere, aut deserunt repudiandae velit aspernatur facilis. Doloremque maxime animi minus?</p>
 </body>
 </html>
