criei um botão - (front)

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -18,5 +18,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugiat vitae ratione voluptatem odio recusandae cum molestiae ullam soluta facere, aut deserunt repudiandae velit aspernatur facilis. Doloremque maxime animi minus?</p>
     <h3>sla</h3>
+    <input type="button">
 </body>
 </html>
