Add paragraph to index.html
Added a new paragraph element with placeholder text.

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
+    <p> lorem </p>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure est ad, dignissimos, natus veritatis nostrum voluptatum doloribus laborum iste sed recusandae facere totam cumque modi! Amet deleniti reiciendis enim ipsam.</p>
     <hr>
