--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro site em repositorio</title>
+    <style>
+        body{
+            background-color: antiquewhite;
+        }
+    </style>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
